Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/InvalidString.ru
/? Error Léxico, caracter dentro del string no pertenece al alfabeto.
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 4 | COLUMNA 6 | ERROR EN LA DEFINICION DEL STRING: STRING NO VALIDO "hola¬
"hola¬"